# vibe-kanban

./: .gitignore  Cargo.toml  Makefile  pnpm-lock.yaml
.claude/skills/kanban/: SKILL.md
crates/api-types/src/: lib.rs  overseer.rs  pull_request.rs  pull_requests_local.rs
crates/db/.sqlx/: query-087d6b45c3da5351eccf9973f8691f14c0e659161b42283c1f0cbe5414800133.json  query-0c93caac1f411124e92ed0a23a7d1296821f7162eed23a6f22d67238e3175d6f.json  query-1f78a74704c25f817f02124f779a46d8ee80e71664df63a1a3a5f03ff2df9d49.json  query-269a1587bfeb48657203f134e52acab561b021c84bff15e04e63c175dcaa5dac.json  query-3b50e80278bf023ca3da4dd9b3ba5f1ddd5f7d26b928a8018837fbc05b101fbe.json  query-5f61c51b7ff204d846d1224e298d3e56668f3129952081268ace3d7c5f305139.json  query-63e5b7a944ba0b2028af35dbfd016cd469e1f1903da23c227b517fecda47aca9.json  query-6f18f1435612f5a6c0b679fc0858b2b0885886d7e8883b269117d64184642536.json  query-8c4b810450562179bd98d1a0804fd5a24ac7ed9742e8bd43d2b1b49b90b51b30.json  query-a0eb8cf1f2fed52867423be597e743e24770b908f1deafebc191f8e55c7253f4.json  query-d0acd6722231ed22ba0bb45ea649b0c48d5f76289773924939a1ee1f7aac07fe.json  query-dd3217011bbea9c5b7b6619156f946df85d598b09a4e20a6db618ebe5845f8fc.json  query-fb15fb6709eb7c5837ded66cb4dd242bdabf827e0da2f060a5153fef5ff18160.json
crates/db/migrations/: 20260317000000_add_overseer_issues_and_statuses.sql
crates/relay-control/: Cargo.toml
crates/relay-control/src/: signed_ws.rs
crates/relay-hosts/: Cargo.toml
crates/relay-webrtc/: Cargo.toml
crates/server/: Cargo.toml
shared/: remote-types.ts  types.ts
(+48 files in other folders)
